--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
 		"guzzlehttp/guzzle": "^6.0"
 	},
 
+  "minimum-stability": "dev",
+
     "autoload" : {
       "psr-4": {
         "wpup\\" : "src"
